--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,7 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*",
-        "kartik-v/yii2-password": "@dev",
-        "johnitvn/yii2-ajaxcrud": "*",
-        "mootensai/yii2-enhanced-gii": "dev-master",
-        "kartik-v/yii2-tree-manager": "dev-master",
-        "kartik-v/yii2-datecontrol": "dev-master",
-        "beaten-sect0r/yii2-db-manager": "*",
-        "vova07/yii2-fileapi-widget": "*",
-        "mikehaertl/phpwkhtmltopdf": "^2.2",
-        "FortAwesome/Font-Awesome": "*"
+        "mootensai/yii2-enhanced-gii": "dev-master"
     },
     "require-dev": {
         "codeception/codeception": "*",
