--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,12 @@
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "*",
-        "kartik-v/yii2-password": "@dev",
-        "johnitvn/yii2-ajaxcrud": "*",
-        "mootensai/yii2-enhanced-gii": "dev-master"
+        "yiisoft/yii2-bootstrap": "*"
     },
     "require-dev": {
-        "codeception/codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*",
-        "codeception/specify": "*",
-        "codeception/verify": "*"
+        "yiisoft/yii2-faker": "*"
     },
     "config": {
         "vendor-dir": "_protected/vendor",
