--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "*"
+        "yiisoft/yii2-bootstrap": "*",
+        "kartik-v/yii2-password": "@dev",
+        "johnitvn/yii2-ajaxcrud": "*",
+        "mootensai/yii2-enhanced-gii": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
