--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
-        "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-gii": "*"
     },
     "config": {
         "vendor-dir": "_protected/vendor",
